# freight-sdk

./: .gitignore  Makefile  PLAN.md  README.md
.github/workflows/: publish.yml
n8n/: README.md  eslint.config.mjs  package-lock.json  package.json
n8n/nodes/AlphaLoops/: AlphaLoops.node.ts
n8n/nodes/AlphaLoops/sdk/: http-client.ts
n8n/nodes/AlphaLoops/sdk/resources/: contacts.ts
n8n/scripts/: sync-sdk.sh
python/: pyproject.toml
python/alphaloops/: api_object.py  client.py  exceptions.py
python/alphaloops/freight/: __init__.py  api_object.py  async_client.py  async_http_client.py  config.py  http_client.py
python/alphaloops/freight/resources/: async_carriers.py  async_contacts.py  async_crashes.py  async_fleet.py  async_inspections.py  carriers.py  contacts.py  fleet.py  inspections.py
python/alphaloops/resources/: carriers.py  crashes.py
python/tests/: test_api_object.py  test_async_integration.py  test_exceptions.py  test_integration.py  test_sdk.py
typescript/: README.md  package-lock.json  package.json
typescript/src/: client.ts  config.ts  http-client.ts  index.ts
typescript/src/resources/: carriers.ts  contacts.ts  crashes.ts  fleet.ts  inspections.ts
typescript/tests/: test-integration.test.ts
